@@ -1,3 +1,7 @@
+2010-02-23  Harald Koenig  <H.Koenig@science-computing.de>
+
+	* varobj.c (varobj_update): Avoid non-constants in initializers.
+
 2010-02-23  Tom Tromey  <tromey@redhat.com>
 
 	* dwarf2loc.c (read_pieced_value) <DWARF_VALUE_STACK>: Correctly
